--- a/NumberSystemConverter_UnitTests/NumberSystemConverter_UnitTests.csproj
+++ b/NumberSystemConverter_UnitTests/NumberSystemConverter_UnitTests.csproj
@@ -51,8 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RomanNumeralConverter.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="RomanNumeralConverterUpperAndLowerBoundsUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NumberSystemConverter\NumberSystemConverter.csproj">
